--- a/ionic1/package.json
+++ b/ionic1/package.json
@@ -12,6 +12,10 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "gulp-load-plugins": "^1.4.0",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-uglify": "^2.0.0",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
