--- a/ionic1/package.json
+++ b/ionic1/package.json
@@ -3,21 +3,32 @@
   "version": "0.0.1",
   "author": "Danielle Soldera",
   "description": "myfoodtruckapp: An Ionic project",
-  "dependencies": {
-    "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
     "bower": "^1.3.3",
+    "chai": "^3.5.0",
+    "gulp": "^3.5.6",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.2.0",
     "gulp-load-plugins": "^1.4.0",
+    "gulp-minify-css": "^0.3.0",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.9.1",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sinon": "^1.0.5",
+    "mocha": "^3.2.0",
+    "phantomjs-prebuilt": "^2.1.14",
+    "shelljs": "^0.3.0",
+    "sinon": "^1.17.6"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
